fixed tea overlay on iphone 6 plus view

--- a/style/style.css
+++ b/style/style.css
@@ -347,3 +347,9 @@ a {
         margin-right: 100px;
     }
 }
+
+@media (max-width: 425px) and (min-width: 414px) {
+    #tea1-overlay, #tea2-overlay {
+        margin-left: 54px !important;
+    }
+}
